Fix Spacing & Added Email Label Forgot Password
Fixed spacing for Forgot Password, and added label for email. Added pattern as well and made it required. Also, updated spacing for logo and anime list.

--- a/frontend/src/css/AnimeCard.css
+++ b/frontend/src/css/AnimeCard.css
@@ -5,7 +5,7 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  padding: 20px;
+  padding: 40px;
 }
 
 .anime-card {
